# mocklib

./: CMakeLists.txt  libc_mock.c  nl_mock.c
scripts/: get_mocks.sh
